[package]
name = "brainfuckers"
version = "0.0.1"
edition = "2021"
authors = ["musicalskele <musicalskele@gmail.com>"]
description = "basic brainfuck interpreter written in rust."
keywords = ["brainfuck", "programming"]
repository = "https://github.com/musicalskele/brainfuckers"
license = "AGPL-3.0"
readme = "README.md"
[dependencies]